<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_2C2E30"
    tools:context="com.liubowang.photoretouch.Feedback.FeedBackActicity">

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="0dp"
        android:layout_height="45dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/setting_suggections"
            android:textColor="@color/color_565859"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/iv_back_feed"
            android:layout_width="45dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back" />
    </FrameLayout>

    <TextView
        android:id="@+id/textview"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/ei_suggestion_p"
        android:textColor="@color/color_565859"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/frameLayout" />

    <EditText
        android:id="@+id/et_suggestion_content_feed"
        android:layout_width="0dp"
        android:layout_height="220dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/suggestion_text_bg"
        android:hint="@string/ei_suggestion_hint"
        android:padding="10dp"
        android:minLines="10"
        android:gravity="top"
        android:textSize="13sp"
        android:textColor="@color/color_565859"
        android:textColorHint="#3b3c3f"
        app:layout_constraintEnd_toEndOf="@+id/guideline41"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toBottomOf="@+id/textview" />

    <EditText
        android:id="@+id/et_user_name_feed"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/suggestion_text_bg"
        android:gravity="center"
        android:hint="@string/ei_user_name_hint"
        android:textColor="@color/color_565859"
        android:textColorHint="@color/color_565859"
        android:textSize="13sp"
        app:layout_constraintEnd_toEndOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toBottomOf="@+id/et_suggestion_content_feed" />

    <EditText
        android:id="@+id/et_user_tel_feed"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/suggestion_text_bg"
        android:textColor="@color/color_565859"
        android:textColorHint="@color/color_565859"
        android:hint="@string/ei_user_qq_email"
        android:textSize="13sp"
        android:inputType="textEmailAddress|phone|number"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toBottomOf="@+id/et_suggestion_content_feed" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline40"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline41"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline42"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ei_bu_xie_lou"
        android:textColor="@color/color_565859"
        android:textSize="12sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toBottomOf="@+id/et_user_name_feed" />

    <Button
        android:id="@+id/b_ti_jiao_feed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/ei_ti_jiao"
        android:background="@drawable/ti_jiao_bg"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/tv_qq_c_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/ei_qq_c"
        android:drawableTop="@drawable/qq"
        android:padding="5dp"
        android:drawablePadding="5dp"
        android:textColor="@color/color_565859"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline42"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toBottomOf="@+id/b_ti_jiao_feed" />

    <TextView
        android:id="@+id/tv_email_c_feed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:drawablePadding="5dp"
        android:drawableTop="@drawable/mail"
        android:padding="5dp"
        android:text="@string/ei_email_c"
        android:textColor="@color/color_565859"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline42"
        app:layout_constraintTop_toBottomOf="@+id/b_ti_jiao_feed" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/color_565859"
        app:layout_constraintBottom_toTopOf="@+id/tv_qq_c_feed"
        app:layout_constraintEnd_toStartOf="@+id/guideline41"
        app:layout_constraintStart_toStartOf="@+id/guideline40"
        app:layout_constraintTop_toBottomOf="@+id/b_ti_jiao_feed" />
</android.support.constraint.ConstraintLayout>
