<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/root_effect"
    android:background="@color/color_2C2E30"
    tools:context="com.liubowang.photoretouch.Effect.EffectActivity">

    <ImageView
        android:id="@+id/iv_status_adjust"
        android:layout_width="0dp"
        android:layout_height="25dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/color_2C2E30"/>
    <com.liubowang.photoretouch.Normal.TopToolView
        android:layout_width="0dp"
        android:layout_height="45dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        android:id="@+id/ttl_top_tool_effect"
        app:layout_constraintTop_toBottomOf="@+id/iv_status_adjust"
        android:background="@drawable/navi_bg">

    </com.liubowang.photoretouch.Normal.TopToolView>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_container_effect"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom_container_effect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ttl_top_tool_effect"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <ImageView
            android:id="@+id/iv_origin_image_effect"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <jp.co.cyberagent.android.gpuimage.GPUImageView
            android:id="@+id/gpu_image_view_effect"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

        <ImageView
            android:id="@+id/iv_result_image_effect"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.liubowang.photoretouch.Draw.BrushView
            android:id="@+id/bv_brush_effect"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:brush_width="50"
            app:brush_eraser_width="50"
            app:brush_color="#FF0000"
            app:brush_line_cap="round"
            app:brush_antialias="true"
            app:draw_dither="true"
            app:brush_background_color="#00000000"
            app:layout_constraintBottom_toBottomOf="@+id/dv_draw_effect"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.liubowang.photoretouch.Draw.BrushView>

        <com.liubowang.photoretouch.Draw.DrawView
            android:id="@+id/dv_draw_effect"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:draw_antialias="true"
            app:draw_background_color="#00000000"
            app:draw_color="#FFFFFF"
            app:draw_dither="true"
            app:draw_line_cap="round"
            app:draw_width="6"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

        </com.liubowang.photoretouch.Draw.DrawView>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_edit_type_container_effect"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/edit_type_bg"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="@+id/guideline2"
        app:layout_constraintRight_toLeftOf="@+id/guideline3"
        app:layout_constraintTop_toBottomOf="@+id/ttl_top_tool_effect">

        <TextView
            android:id="@+id/tv_cutout_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/ei_cutout"
            android:textColor="@drawable/eidt_type_text_selector" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_565859"/>
        <TextView
            android:id="@+id/tv_preview_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:gravity="center"
            android:maxLines="1"
            android:text="@string/ei_preview"
            android:textColor="@drawable/eidt_type_text_selector" />
        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/color_565859"/>
        <TextView
            android:id="@+id/tv_effect_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:ellipsize="middle"
            android:gravity="center"
            android:singleLine="true"
            android:text="@string/ei_effect_"
            android:textColor="@drawable/eidt_type_text_selector" />
    </LinearLayout>

    <com.liubowang.photoretouch.Effect.SBEToolView
        android:id="@+id/sbetv_sbe_tool_effect"
        android:layout_width="0dp"
        android:layout_height="40dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom_container_effect"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:background="@color/color_2C2E30"
        android:layout_marginBottom="4dp">

    </com.liubowang.photoretouch.Effect.SBEToolView>

    <LinearLayout
        android:id="@+id/ll_bottom_container_effect"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:orientation="horizontal"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/id_banner_container_effect">
        <com.liubowang.photoretouch.Normal.ImageTextButton
            android:id="@+id/itb_smart_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:is_selected="true"
            app:normal_background="@color/color_242527"
            app:normal_image="@drawable/zhinengxuanze1"
            app:normal_text="@string/ei_smart_select"
            app:normal_text_color="@color/color_565859"
            app:selected_background="@color/color_242527"
            app:selected_image="@drawable/zhinengxuanze2"
            app:selected_text="@string/ei_smart_select"
            app:selected_text_color="@color/color_FFFFFF"
            app:show_image_view="true"
            app:show_text_view="true"
            app:text_size="10sp"
            tools:layout_editor_absoluteX="320dp"
            tools:layout_editor_absoluteY="8dp" />

        <com.liubowang.photoretouch.Normal.ImageTextButton
            android:id="@+id/itb_brush_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:is_selected="false"
            app:normal_background="@color/color_242527"
            app:normal_image="@drawable/huashua1"
            app:normal_text="@string/ei_brush"
            app:normal_text_color="@color/color_565859"
            app:selected_background="@color/color_242527"
            app:selected_image="@drawable/huashua2"
            app:selected_text="@string/ei_brush"
            app:selected_text_color="@color/color_FFFFFF"
            app:show_image_view="true"
            app:show_text_view="true"
            app:text_size="10sp"
            tools:layout_editor_absoluteX="-28dp"
            tools:layout_editor_absoluteY="33dp" />

        <com.liubowang.photoretouch.Normal.ImageTextButton
            android:id="@+id/itb_eraser_effect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            app:is_selected="false"
            app:show_image_view="true"
            app:show_text_view="true"
            app:normal_background="@color/color_242527"
            app:normal_image="@drawable/xiangpica1"
            app:normal_text="@string/ei_eraser"
            app:normal_text_color="@color/color_565859"
            app:selected_background="@color/color_242527"
            app:selected_image="@drawable/xiangpica2"
            app:selected_text="@string/ei_eraser"
            app:selected_text_color="@color/color_FFFFFF"
            app:text_size="10sp"
            app:image_padding="4dp"/>
    </LinearLayout>

    <com.liubowang.photoretouch.Effect.FilterPickerView
        android:id="@+id/fpv_filter_picker_effect"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        app:layout_constraintBottom_toTopOf="@+id/id_banner_container_effect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

    </com.liubowang.photoretouch.Effect.FilterPickerView>
    <LinearLayout
        android:id="@+id/id_banner_container_effect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">
    </LinearLayout>

    <ProgressBar
        android:id="@+id/pb_progress_effect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/ll_bottom_container_effect"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ll_edit_type_container_effect"
        app:layout_constraintVertical_bias="0.5" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline2"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.16" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline3"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.84" />

    <ImageView
        android:id="@+id/iv_guide_effect"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:layout_marginStart="8dp"
        android:padding="8dp"
        app:layout_constraintBottom_toTopOf="@+id/sbetv_sbe_tool_effect"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/guide" />
</android.support.constraint.ConstraintLayout>
